# mcp-outline

./: .env.example  .gitignore  .mcp.dev.json  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PHASE3_ANALYSIS.md  PR_13_REVIEW.md  PR_DESCRIPTION.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.yml  glama.json  openapi.custom-gpt.yaml  pyproject.toml  server.json  smithery.yaml  start_server.sh  test_mcp.py
.claude/: launch.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/agents/: outline-explorer.md
.claude/agents/: e2e-test-runner.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codeql.yml  docker-build.yml  (+4 more)
agents/: outline-explorer.md
config/: dex-config.yaml
docs/: access-control.md  client-setup.md  configuration.md  development.md  dynamic-tool-list.md  registries.md  structured-output.md  troubleshooting.md
hooks/: check_outline_config.py  hooks.json
scripts/: bump_version.py
tests/: __init__.md  __init__.mmd  __init__.py  helpers.py  test_dependency_pins.py  test_dotenv_config.py  test_github_copilot_simulation.py  test_health.md  test_health.mmd  test_health.py  test_list_collections_stdio.py  test_mcp_dynamic_tools_integration.py  test_mcp_integration.md  test_mcp_integration.mmd  test_mcp_integration.py  test_server.py  test_session_hook.py  test_stdio_logging.py  test_tool_annotations.py
(+139 files in other folders)
